# sigmatiq-nexus

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-nexus-prod.yml  validate-nexus-prod.yml
docs/: NEXUS_CURRENT_SYSTEM_GUIDE.md  NEXUS_DETERMINISTIC_MESSAGE_NARRATIVES_DESIGN.md  NEXUS_LIVE_FEATURE_CONTRACT.md  NEXUS_PARTICIPANT_FLOW_CONTEXT_DESIGN.md  NEXUS_SAME_WINDOW_DAY_OVER_DAY_CONTEXT_DESIGN.md
docs/nexus-v2/: automated-strategy-platform-disclosures-and-copy-v0.1.md  automated-strategy-platform-fill-realism-calibration-v0.1.md  automated-strategy-platform-market-regime-classification-v0.1.md  automated-strategy-platform-multileg-requirements-v0.2.md  automated-strategy-platform-requirements-v1.3.md  nexus-product-strategy-90-day-v0.1.md  nexus-strategy-message-ui-requirements-v0.1.md  nexus-ui-designer-requirements-v0.1.md  nexus-web-app-v1-ui-requirements-v0.2.md
models/: alpha_fusion_spy_v10.onnx  hybrid_scaler_v6.npz  hybrid_spy_v6.onnx  scaler_p_v10.npz  scaler_s_v10.npz  tcn_encoder_v1.onnx
models/rl/: cql_policy_v1.onnx
scripts/: check_nexus_publish.py
src/sigmatiq_nexus/: feature_audit.py  narratives.py  nexus_worker.py  participant_flow.py  simulate_live.py
tests/: test_deploy_workflow_contract.py  test_narratives.py  test_nexus_worker.py  test_participant_flow.py
