[project]
name = "sigmatiq-nexus"
version = "0.1.0"
description = "High-speed multi-stage strategy engine for real-time institutional flow."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.12",
    "redis[hiredis]>=5.0",
    "onnxruntime>=1.19",
    "numpy>=1.26",
    "pydantic>=2.8",
]

[project.scripts]
nexus = "sigmatiq_nexus.nexus_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sigmatiq_nexus"]
